Feat(Backend and Frontend): More work on bot tables - Create bot dialog, fix bugs in bot status
